# slop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LAUNCH_PLAN.md  LICENSE  PRE_LAUNCH_CHECKLIST.md  README.md  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: preflight.yml  release-desktop.yml  release.yml  update-homebrew.yml
apps/cli/: README.md  TESTING.md  go.mod  main.go
apps/desktop/: index.html  package.json  vite.config.ts
apps/extension/: build.ts  package.json  popup.html  tsconfig.json
benchmarks/mcp-vs-slop/: README.md  TMP.MD  package.json  run.ts  tsconfig.json
cli/: README.md  go.mod  main.go
cli/provider/: discovery.go  manager.go
cli/tui/: app.go  discovery.go  inspector.go  invoke.go  tree.go
desktop/: package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  provider_manager.rs
desktop/src-tauri/src/bridge/: mod.rs
desktop/src-tauri/src/chat/: engine.rs  tool_router.rs
desktop/src-tauri/src/llm/: gemini.rs
desktop/src-tauri/src/workspace/: mod.rs
docs/: releasing.md
docs/api/: angular.md  client.md  consumer.md  core.md  go.md  index.md  openclaw-plugin.md  python.md  react.md  rust.md  server.md  solid.md  svelte.md  tanstack-start.md  vue.md
docs/desktop/: install.md
docs/extension/: install.md  privacy.md
docs/getting-started/: index.md  installation.md
docs/guides/: agent-scaffolding.md  angular.md  consumer.md  go.md  openclaw.md  python.md  react.md  rust.md  server-apps.md  solid.md  svelte.md  tanstack-start.md  vanilla.md  vue.md
docs/sdk/: development.md  discovery.md  index.md  sessions.md
examples/: CREATING_EXAMPLES.md  README.md
examples/angular-dashboard/: angular.json  package.json  tsconfig.json
examples/cli/: BLUEPRINT.md  GUIDE.md  test-harness.ts
examples/cli/python/: README.md  pyproject.toml
examples/cli/python/src/tsk/: __init__.py  __main__.py  cli.py  main.py  slop_provider.py  store.py
examples/cli/rust/: Cargo.toml  README.md  seed.json
examples/cli/rust/src/: cli.rs  main.rs  provider.rs  store.rs
examples/clipboard-manager/: build.ts  package.json
examples/demo/: README.md  index.html
examples/desktop/: BLUEPRINT.md  GUIDE.md  seed.json  test-harness.ts
examples/desktop/python/: README.md  pyproject.toml
examples/desktop/python/src/pomodoro/: __init__.py  __main__.py  app.py  pomodoro.py  provider.py
examples/desktop/rust/src-tauri/: Cargo.toml  tauri.conf.json
examples/desktop/rust/src-tauri/capabilities/: default.json
examples/desktop/rust/src-tauri/icons/: icon.icns
examples/desktop/rust/src-tauri/src/: main.rs  pomodoro.rs  provider.rs
examples/full-stack/python-react/backend/: README.md  pyproject.toml
examples/full-stack/python-react/backend/src/contacts_api/: main.py  slop_tree.py  state.py  ui_mount.py
examples/nextjs-todos/: README.md  package.json  pnpm-lock.yaml  server.ts  tsconfig.tsbuildinfo
examples/notes-spa/: build.ts  package.json  serve.ts
examples/nuxt-contacts/: README.md  app.vue  nuxt.config.ts  package.json
examples/solid-notes/: index.html  package.json  tsconfig.json
examples/spa/: BLUEPRINT.md  GUIDE.md  seed.json  test-minimal.html  test-spa.ts  test-ws-relay.ts
examples/svelte-bookmarks/: package.json
examples/sveltekit-links/: README.md  package.json  vite.config.ts
examples/tanstack-start/: vite.config.ts
examples/vue-tasks/: index.html  package.json  tsconfig.json
extension/: manifest.json  package.json  popup.html
extensions/openclaw-plugin-slop/: package.json  (+1 more)
homebrew/: README.md
logo/: README.md
mvp/: package.json
scripts/: build-typescript-packages.ts  preflight.ts
spec/: 01-overview.md  02-state-tree.md  03-transport.md  04-messages.md  05-affordances.md  06-attention.md  07-adapters.md  08-web-integration.md  09-scaling.md  10-desktop-integration.md  11-agent-integration.md  12-openclaw-integration.md  13-content-references.md  14-async-actions.md  limitations.md
(+544 files in other folders)
