[package]
name = "slop-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "slop_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "slop-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
slop-ai = { path = "../../packages/rust/slop-ai" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
