[package]
name = "tsk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
slop-ai = { path = "../../../packages/rust/slop-ai", features = ["native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
