[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomodoro"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "slop-ai",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pomodoro"]

[project.scripts]
pomodoro = "pomodoro.__main__:main"
