[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
slop-ai = { path = "../../../../packages/rust/slop-ai", features = ["native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "time"] }
dirs = "6"
